data fixed to be readable

--- a/pokechallenge/src/App.scss
+++ b/pokechallenge/src/App.scss
@@ -17,3 +17,8 @@
 .sprite__container {
   width: 100%;
 }
+
+.types {
+  display: inline-block;
+  padding: 2px;
+}
